Wed Aug 15 19:37:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch]:
   - Flush report buffer after writing new values to the UPS. The
     data in the UPS may change because of this, so we want to be
     sure that all subsequent reads, return fresh data.
   - Use calloc() instead of malloc() where useful.
   - HIDGetItemString returns (char *) but receives a (unsigned
     char *) as parameter.
   - physical_to_logical() would always return an integer, since it
     casts the result of the value conversion to a long, before
     returning the result as float.

Wed Aug 15 19:11:40 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/upshid-ups.[ch]:
   - Move the point where we cast the (float) output from what we
     have received through HIDGetItemValue() to a (long) index
     value for the lookup tables to the hu_find_infoval() helper
     function. By doing so, it should be relatively easy to allow
     conversion functions to use the float value, rather than the
     long they have now (might be useful for converting small
     values).

Tue Aug 14 18:47:10 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/snmp-ups.c:
   - Missing curly brackets.

Tue Aug 14 18:31:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.c:
   - Helper function 'find_nut_info_valid' removed. We check for the
     validity of commands and variables during the initialisation, so
     this doesn't need to be repeated when we run instcmd() or
     setvar(), so they can both use 'find_nut_info'.

Mon Aug 13 21:35:13 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - Variables that can be changed need to have 'HU_FLAG_SEMI_STATIC'.

Mon Aug 13 19:53:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * data/cmdvartab, docs/new-names.txt, docs/hid-subdrivers.txt:
   - Rename 'beeper.on' -> 'beeper.enable'
   - Rename 'beeper.off' -> 'beeper.disable'
   - Added 'beeper.mute'
 * drivers/*-hid.c: